--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx tsc && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1"
   },
